# Flux

./: .env.example  .gitignore  Makefile  README.md  compose.yaml  docker-compose.yaml  pyproject.toml  run.py
.github/workflows/: pytest.yml
docker/postgres/: init.sql
docs/: kafka-ui-startup.md
monitoring/: alerts.yml  prometheus.yml
monitoring/grafana/provisioning/dashboards/: pipeline.json
monitoring/grafana/provisioning/datasources/: prometheus.yml
scripts/: kafka_smoke.py
services/: utils.py
services/api/: main.py
services/api/routes/: candles.py  crypto.py  indicators.py
services/consumer/: Indicators.py  base_consumer.py  dead_letter_queue.py  indicator_consumer.py  indicator_engine_consumer.py  indicators.py  main.py  metrics.py  models.py  raw_consumer.py  ticker_consumer.py
services/database/: database.py
services/ingestion/: main.py  producer.py
services/ingestion/exchanges/: base.py  binance.py  coinbase.py  kraken.py  normalizers.py
services/market_data/: __init__.py  models.py
tests/: conftest.py  test_consumer_metrics.py  test_exchange_normalizers.py  test_market_trades_models.py  test_ticker_consumer.py
