[project]
name = "my-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.13.0",
    "asyncio>=4.0.0",
    "websockets>=16.0",
    "redis>=5.0.0",
    "psycopg2>=2.9.11",
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "uvicorn>=0.42.0",
    "python-json-logger>=4.0.0",
    "tenacity>=9.1.4",
]
